codepkg/objects/Funding_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual End Date, if extended or amended, from the Planned End Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Actual End Date of the Funding Opportunity.</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>Actual Start Date, if different, from the Planned Start Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Actual Start Date of Funding Opportunity.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amended_Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the most recent previously created amendment record.</description>
        <inlineHelpText>Displays the most recent previously created amendment record name.</inlineHelpText>
        <label>Amended Announcement</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Announcement_Version__c</fullName>
        <description>The version of the announcement.</description>
        <inlineHelpText>Version of the Announcement.</inlineHelpText>
        <label>Announcement Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <formula>IF(  Program_Name__r.Name   = &quot;PA - Federal&quot;  || Program_Name__r.Name  = &quot;PA - FMAG&quot;, Incident_Name__r.Declaration_Number__c, 
IF(Program_Name__r.Name = &quot;CDAA (State Funding)&quot;, Incident_Name__r.State_Declaration_Number__c, &quot;&quot;)
)</formula>
        <label>Declaration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the details of the funding opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of the details of the funding opportunity.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Application_Deadline__c</fullName>
        <description>FEMA Application Deadline.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FEMA Application Deadline Date.</inlineHelpText>
        <label>Federal Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Federal_CFDA_Number__c</fullName>
        <description>Federal CFDA Number -Used for Docusign</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Federal CFDA Number</inlineHelpText>
        <label>Federal CFDA Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <description>What is the Title or Name of this Funding Opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Title or Name of the Funding Opportunity on the Notice of Funding Opportunity or 12 Month Lock In Letter from FEMA.</inlineHelpText>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Incident / Disaster Name</description>
        <inlineHelpText>The Incident Name related to this Funding Opportunity</inlineHelpText>
        <label>Incident Name</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The record owner. Should be a Programs Profile or Role</description>
        <inlineHelpText>The Staff Member who owns the record</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_of_Performance__c</fullName>
        <description>Period of performance timeframe for the funding opportunity i.e. 36 months.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Valid Duration for the Funding Opportunity  ( Stipulated in the NOFO or 12 mon lock in letter).</inlineHelpText>
        <label>Period of Performance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Expected End Date of the Funding Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Planned End Date of the Funding Opportunity. For DR, this date is eight (8) years from the date of declaration. For FMAG, it is two (2) years from the date of declaration.</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>Expected beginning of the Funding Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Planned Start Date of Funding Opportunity.</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program that issued with this Funding Opportunity</description>
        <inlineHelpText>Program Name for the funding Opportunity ( Ex: PA-Federal, HMGP etc.).</inlineHelpText>
        <label>Program Name</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>What is the Stage of this Funding Opportunity.</description>
        <inlineHelpText>Status of Funding Opportunity ( Ex: Draft, Pending, Approved etc.).</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disaster Grant / Funding Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Name__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disaster Grants / Funding Opps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_End_Date_Start_Date_Validation</fullName>
        <active>true</active>
        <description>Actual End Date should be greater than Actual Start Date</description>
        <errorConditionFormula>AND( ISBLANK(External_Id__c ),Actual_End_Date__c &lt; Actual_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>&quot;Actual End Date&quot; should be greater than &quot;Actual Start Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_Date_End_Date_validation</fullName>
        <active>true</active>
        <description>Planned End Date should be greater than Planned Start Date</description>
        <errorConditionFormula>AND(ISBLANK(External_Id__c ) ,Planned_End_Date__c &lt; Planned_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Planned_End_Date__c</errorDisplayField>
        <errorMessage>&quot;Planned End Date&quot; should be greater than &quot;Planned Start Date&quot;.</errorMessage>
    </validationRules>
</CustomObject>